added crud operations + MediatR to solution

--- a/src/Client/Activities.Client/Pages/Index.razor
+++ b/src/Client/Activities.Client/Pages/Index.razor
@@ -4,7 +4,7 @@
 
 <PageTitle>CleanActivities</PageTitle>
 
-<h1><MudIcon Icon="@Icons.Material.Filled.People" Size="Size.Large"/> <MudSpacer/> CleanActivities</h1>
+<h1 class="d-inline-block"><MudIcon Icon="@Icons.Material.Filled.People" Size="Size.Large"/> CleanActivities</h1>
 
 
 @if (_activities is null)
