--- a/src/Client/Activities.Client/Shared/MainLayout.razor
+++ b/src/Client/Activities.Client/Shared/MainLayout.razor
@@ -1,9 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-@*    <div class="sidebar">
+<div>
+    <div class="d-flex" style="background-image: linear-gradient(135deg, rgb(24, 42, 115) 0%, rgb(33, 138, 174) 69%, rgb(32, 167, 172) 89%">
         <NavMenu />
-    </div>*@
+    </div>
 
     <main>
         <article class="content px-4">
