--- a/src/Client/Activities.Client/_Imports.razor
+++ b/src/Client/Activities.Client/_Imports.razor
@@ -9,6 +9,7 @@
 @using Activities.Client
 @using Activities.Client.Shared
 @using Activities.Models.Dtos
+@using Activities.Client.Components.Dashboard
 
 @*mudblazor*@
 @using MudBlazor
