--- a/src/Client/Activities.Client/Shared/NavMenu.razor
+++ b/src/Client/Activities.Client/Shared/NavMenu.razor
@@ -1,30 +1,10 @@
-﻿@*<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">Activities.Client</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
-
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-    </nav>
-</div>
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
-*@
+﻿<MudContainer Fixed="true">
+    <MudNavMenu Dense="true" Class="d-flex justify-content-around align-items-center" Style="color: whitesmoke" Bordered="true">
+        <MudNavLink>
+            <MudImage Src="images/logo.png" Width="50"/>
+            Activities
+        </MudNavLink>
+        <MudNavLink>Activities</MudNavLink>
+        <MudNavLink>Create Activity</MudNavLink>
+    </MudNavMenu>
+</MudContainer>
