--- a/src/Client/Activities.Client/wwwroot/css/app.css
+++ b/src/Client/Activities.Client/wwwroot/css/app.css
@@ -2,6 +2,7 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-color: #EAEAEA !important;
 }
 
 h1:focus {
