--- a/src/Client/Activities.Client/_Imports.razor
+++ b/src/Client/Activities.Client/_Imports.razor
@@ -10,6 +10,8 @@
 @using Activities.Client.Shared
 @using Activities.Models.Dtos
 @using Activities.Client.Components.Dashboard
+@using Activities.Client.Components.Dashboard.Details
+@using Activities.Client.Components.Dashboard.Form
 
 @*mudblazor*@
 @using MudBlazor
