--- a/src/Client/Activities.Client/Components/Dashboard/ActivityDashboard.razor
+++ b/src/Client/Activities.Client/Components/Dashboard/ActivityDashboard.razor
@@ -1,15 +1,9 @@
 ﻿<MudGrid>
     <MudItem xs="8">
-        @if (Activities is null)
-        {
-            <h5>Sorry, cannot find any activities...</h5>
-        }
-        else
-        {
-            @foreach (var activity in Activities)
-            {
-                <h5>@activity.Title</h5>
-            }
-        }
+        <ActivityList Activities="Activities" @bind-SelectedActivity="@SelectedActivity" />
+    </MudItem>
+    <MudItem xs="4">
+        <ActivityDetails @bind-Activity="@SelectedActivity" @bind-EditRequested="@EditMode"/>
+        <ActivityForm @bind-Activity="@SelectedActivity" @bind-EditMode="@EditMode"/>
     </MudItem>
 </MudGrid>
