--- a/src/Client/Activities.Client/Shared/MainLayout.razor
+++ b/src/Client/Activities.Client/Shared/MainLayout.razor
@@ -1,11 +1,13 @@
 ﻿@inherits LayoutComponentBase
 
-<div>
-    <div class="d-flex" style="background-image: linear-gradient(135deg, rgb(24, 42, 115) 0%, rgb(33, 138, 174) 69%, rgb(32, 167, 172) 89%">
-        <NavMenu />
-    </div>
+<MudThemeProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
 
-    <main>
+<div>
+    <NavMenu />
+
+    <main style="padding: 15px;">
         <article class="content px-4">
             @Body
         </article>
