handle crud operations in client + added viewmodel

--- a/src/Client/Activities.Client/Components/Dashboard/ActivityList.razor
+++ b/src/Client/Activities.Client/Components/Dashboard/ActivityList.razor
@@ -1,4 +1,6 @@
-﻿@if (Activities is null || Activities.Count() <= 0)
+﻿@inject ActivitiesService ActivitiesService
+
+@if (Activities is null || Activities.Count() <= 0)
 {
     <h5>Sorry, cannot find any activities...</h5>
 }
