--- a/src/Client/Activities.Client/_Imports.razor
+++ b/src/Client/Activities.Client/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using Activities.Client
 @using Activities.Client.Shared
+@using Activities.Client.ViewModels
 @using Activities.Models.Dtos
 @using Activities.Client.Components.Dashboard
 @using Activities.Client.Components.Dashboard.Details
