--- a/src/Client/Activities.Client/Shared/MainLayout.razor
+++ b/src/Client/Activities.Client/Shared/MainLayout.razor
@@ -7,8 +7,8 @@
 <div>
     <NavMenu />
 
-    <main style="padding: 15px;">
-        <article class="content px-4">
+    <main>
+        <article>
             @Body
         </article>
     </main>
