--- a/src/Client/Activities.Client/_Imports.razor
+++ b/src/Client/Activities.Client/_Imports.razor
@@ -13,6 +13,7 @@
 @using Activities.Client.Components.Dashboard
 @using Activities.Client.Components.Dashboard.Details
 @using Activities.Client.Components.Dashboard.Form
+@using Activities.Client.Components.List
 
 @*mudblazor*@
 @using MudBlazor
