dealing with server errors

--- a/src/Client/Activities.Client/Shared/NavMenu.razor
+++ b/src/Client/Activities.Client/Shared/NavMenu.razor
@@ -4,4 +4,5 @@
         <MudTabPanel Icon="@Icons.Material.Filled.People" Text="Activities" OnClick="@(() => NavigationManager.NavigateTo("/"))"/>
         <MudTabPanel Text="Activities" OnClick="@(() => NavigationManager.NavigateTo("/Activities"))"/>
         <MudTabPanel Text="Create Activity" OnClick="@(() => NavigationManager.NavigateTo("/CreateActivity"))"/>
+        <MudTabPanel Text="Errors" OnClick="@(() => NavigationManager.NavigateTo("/Errors"))"/>
 </MudTabs>
