--- a/src/Client/Activities.Client/_Imports.razor
+++ b/src/Client/Activities.Client/_Imports.razor
@@ -15,6 +15,7 @@
 @using Activities.Client.Components.Dashboard.Form
 @using Activities.Client.Components.List
 @using Activities.Client.Components.Users
+@using Activities.Client.Components.Profiles
 @using Activities.Client.Pages.UserManagement
 @using Microsoft.AspNetCore.Components.Authorization;
 @using Microsoft.AspNetCore.Authorization;
