--- a/src/Client/Activities.Client/_Imports.razor
+++ b/src/Client/Activities.Client/_Imports.razor
@@ -30,6 +30,9 @@
 @*cropper*@
 @using Cropper.Blazor.Components
 
+@*humanizr*@
+@using Humanizer;
+
 @inject NavigationManager NavigationManager
 @inject ISnackbar SnackBar
 @inject AuthenticationStateProvider AuthStateProvider
